--- a/gharuan.html
+++ b/gharuan.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Village Name</title>
+    <title>Gharuan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/history.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
