--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-
+        <img src="images/cu.png" alt="Chandigarh University">
       </div>
 
       <div class="links">
