--- a/mankheri.html
+++ b/mankheri.html
@@ -102,7 +102,7 @@ Driving License        </div>
     <!-- End sideNav -->
     <section id="ct">
       <div id="history" class="tab shdw2" style="background: #fff">
-        <div class="img" style="background-image: url('images/mankheri.jpeg');
+        <div class="img" style="background-image: url('images/mankheri.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;">
