--- a/batta.html
+++ b/batta.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Batta</title>
+    <title>Village Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/history.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
@@ -110,6 +110,8 @@ Driving License        </div>
         </div>
         <div class="content">
             <h2 style="float:left; color: #000; position: static; margin-bottom: 20px; ">Batta</h2>
+            <h3>Sarpanch - Amar Singh</h3><br><h4>Contact - 9417889288</h4>
+          
 Batta is a Village in Kharar Tehsil in S.a.s Nagar District of Punjab State, India. It is located 20 KM towards west from District head quarters Sahibzada Ajit Singh Nagar. 12 KM from Kharar. 25 KM from State capital Chandigarh
 <br>
 Batta Pin code is 140413 and postal head office is Gharuan .
@@ -201,13 +203,12 @@ Address : <br>Sahauran; <br>Mohali12 Kms From Chandigarhpunjab<br>
           </div>
         </div>
       </div>
-      <div id="schools" class="tab">
-
-        <div class="listItem shdw1">
+      <div class="listItem shdw1">
           <div class="itemImg">
               <h3>GOVT. ELEMENTARY SCHOOL
+                  <br><p>ISR</p>
               </h3>
-              <h4>Village Name-SimabalMajra
+              <h4>Village Name-Batta
 
               <br>
                   Primary School
@@ -217,13 +218,13 @@ Address : <br>Sahauran; <br>Mohali12 Kms From Chandigarhpunjab<br>
         </div>
         <div class="listItem shdw1">
           <div class="itemImg">
-              <h3>GOVT. ELEMENTARY SCHOOL
-                  <br>CO EDUCATION<p>Co</p>
+              <h3>GOVT. HIGH SCHOOL
+                  <br><p>ISR</p>
               </h3>
-              <h4>Village Name-Gharaun
+              <h4>Village Name-Batta
 
               <br>
-                  Primary School
+                  High School
               </h4>
 
           </div>
@@ -232,7 +233,7 @@ Address : <br>Sahauran; <br>Mohali12 Kms From Chandigarhpunjab<br>
           <div class="itemImg">
 
           </div>
-        </div>
+        
       </div>
         <div id="Passport" class="tab">
         <div class="listItem shdw1">
