--- a/mankheri.html
+++ b/mankheri.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mankheri</title>
+    <title>Village Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/history.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
@@ -102,7 +102,7 @@ Driving License        </div>
     <!-- End sideNav -->
     <section id="ct">
       <div id="history" class="tab shdw2" style="background: #fff">
-        <div class="img" style="background-image: url('images/mankheri.jpg');
+        <div class="img" style="background-image: url('images/mankheri.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;">
@@ -111,7 +111,9 @@ Driving License        </div>
         </div>
         <div class="content">
             <h2 style="float:left; color: #000; position: static; margin-bottom: 20px; ">Mankheri</h2>
-Mankheri travel guide provides various traval information like nearest railway station, nearest airport, route map, tourist places and more travel related information. Mankheri people speakes Punjabi as their main communication language. as well as it is a mother tongue of most of the peoples. Some people in Mankheri may speake english as their second langauge.<br>
+<h3>Sarpanch - Balbir Singh</h3><br><h4>Contact - 9417469452</h4>
+          
+            Mankheri travel guide provides various traval information like nearest railway station, nearest airport, route map, tourist places and more travel related information. Mankheri people speakes Punjabi as their main communication language. as well as it is a mother tongue of most of the peoples. Some people in Mankheri may speake english as their second langauge.<br>
             Nearby villages from Mankheri<br>
 The following villages are surrounding villages to Mankheri.<br>The given distance are kilometer from Mankheri and it is based on the straight line distance from Mankheri.<br>
 Nearest railway station to Mankheri<br>
@@ -176,28 +178,16 @@ The following village/town name start like Mankheri. <br>The first four characte
         <div class="listItem shdw1">
           <div class="itemImg">
               <h3>GOVT. ELEMENTARY SCHOOL
-              </h3>
-              <h4>Village Name-SimabalMajra
+              </h3><p>ISR</p>
+        
+              <h4>Village Name - Mankheri
 
               <br>
                   Primary School
               </h4>
 
           </div>
-        </div>
-        <div class="listItem shdw1">
-          <div class="itemImg">
-              <h3>GOVT. ELEMENTARY SCHOOL
-                  <br>CO EDUCATION<p>Co</p>
-              </h3>
-              <h4>Village Name-Gharaun
 
-              <br>
-                  Primary School
-              </h4>
-
-          </div>
-        </div>
         <div class="listItem shdw1">
           <div class="itemImg">
 
