--- a/rurkee.html
+++ b/rurkee.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Rurkee</title>
+    <title>Village Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/history.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
@@ -111,7 +111,9 @@ Driving License        </div>
         </div>
         <div class="content">
             <h2 style="float:left; color: #000; position: static; margin-bottom: 20px; ">Rurkee</h2>
-Rurkee Kham is a medium size village located in Kharar Tehsil of Mohali district, Punjab with total 216 families residing. The Rurkee Kham village has population of 1164 of which 613 are males while 551 are females as per Population Census 2011. <br>
+
+            <h3>Sarpanch - Amarjit Singh</h3><br><h4>Contact - 9876477245</h4>
+          Rurkee Kham is a medium size village located in Kharar Tehsil of Mohali district, Punjab with total 216 families residing. The Rurkee Kham village has population of 1164 of which 613 are males while 551 are females as per Population Census 2011. <br>
 
 In Rurkee Kham village population of children with age 0-6 is 105 which makes up 9.02 % of total population of village. Average Sex Ratio of Rurkee Kham village is 899 which is higher than Punjab state average of 895. Child Sex Ratio for the Rurkee Kham as per census is 615, lower than Punjab average of 846.  <br>
 
@@ -161,31 +163,18 @@ As per constitution of India and Panchyati Raaj Act, Rurkee Kham village is admi
       </div>
       <div id="schools" class="tab">
 
+   
         <div class="listItem shdw1">
           <div class="itemImg">
-              <h3>GOVT. ELEMENTARY SCHOOL
-              </h3>
-              <h4>Village Name-SimabalMajra
+              <h3>GOVT. MIDDLE SCHOOL
+              </h3><p>ISR</p>
+              <h4>Village Name - Rurkhee Pukhta
 
               <br>
-                  Primary School
+                  Middle School
               </h4>
 
           </div>
-        </div>
-        <div class="listItem shdw1">
-          <div class="itemImg">
-              <h3>GOVT. ELEMENTARY SCHOOL
-                  <br>CO EDUCATION<p>Co</p>
-              </h3>
-              <h4>Village Name-Gharaun
-
-              <br>
-                  Primary School
-              </h4>
-
-          </div>
-        </div>
         <div class="listItem shdw1">
           <div class="itemImg">
 
