--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/cu.png" alt="Chandigarh University">
+
       </div>
 
       <div class="links">
@@ -77,7 +77,13 @@
           </div>
         </div>
       </div>
-    </section>
+        
+    </section><!--
+      <section id="buttons">
+          <a href="#" class="button1">Home</a>
+      <a href="#" class="button2">Gallery</a>
+          <a href="#" class="button3">Contact</a>
+      </section>-->
   <!-- End content -->
   <footer>
 
