--- a/simbal.html
+++ b/simbal.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Simbal Majra</title>
+    <title>Village Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/history.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
@@ -109,45 +109,47 @@ Driving License        </div>
 
         </div>
         <div class="content">
-            <h2 style="float:left; color: #000; position: static; margin-bottom: 20px; ">Simbal</h2>
-            <b>Simbal Majra </b>is a Village in Kharar Tehsil in S.a.s Nagar District of Punjab State, India. It is located 16 KM towards west from District head quarters Sahibzada Ajit Singh Nagar. 9 KM from Kharar. 20 KM from State capital Chandigarh
-            <br>
-            Simbal Majra Pin code is 140301 and postal head office is Kharar (Rupnagar).
+            <h2 style="float:left; color: #000; position: static; margin-bottom: 20px; ">Simbal Majra</h2>
+            <h3>Sarpanch - Sarbjeet Singh</h3><br><h4>Contact - 9814961994</h4>
+          
+Simbal Majra is a Village in Kharar Tehsil in S.a.s Nagar District of Punjab State, India. It is located 16 KM towards west from District head quarters Sahibzada Ajit Singh Nagar. 9 KM from Kharar. 20 KM from State capital Chandigarh
+<br>
+Simbal Majra Pin code is 140301 and postal head office is Kharar (Rupnagar).
 
-            <br>
-            Bhjheri ( 1 KM ) , Shakrullapur ( 2 KM ) , Madan Heri ( 3 KM ) , Rora ( 3 KM ) , Deh Kalan ( 3 KM ) are the nearby Villages to Simbal Majra. Simbal Majra is surrounded by Kurali Tehsil towards North , Morinda Tehsil towards west , Majri Tehsil towards North , Mohali Tehsil towards East .
-            <br>
-            Kharar , Morinda , Kurali , Mohali are the near by Cities to Simbal Majra.
-            <br>
-            This Place is in the border of the S.a.s Nagar District and Rupnagar District.<br> Rupnagar District Kurali is North towards this place . Also it is in the Border of other district Chandigarh . It is near to the Chandigarh State Border.<br>
-            <b>Simbal Majra 2011 Census Details</b><br>
-            Simbal Majra Local Language is Punjabi.<br> Simbal Majra Village Total population is 568 and number of houses are 104. Female <br>Population is 45.8%. <br>Village literacy rate is 78.5% and the Female Literacy rate is 31.9%.<br>
-            Population<br>
-            Census Parameter	Census Data
-            Total Population	568
-            Total No of Houses	104
-            Female Population %	45.8 % ( 260)
-            Total Literacy rate %	78.5 % ( 446)
-            Female Literacy rate	31.9 % ( 181)
-            Scheduled Tribes Population %	0.0 % ( 0)
-            Scheduled Caste Population %	0.0 % ( 0)
-            Working Population %	31.5 %
-            Child(0 -6) Population by 2011	52
-            Girl Child(0 -6) Population % by 2011	50.0 % ( 26)<br>
-            <h4>
-              Simbal Majra Census More Deatils.</h4>
-            <br>
-            <b>Politics in Simbal Majra
-            SAD , BSP , INC are the major political parties in this area.</b><br>
-            Polling Stations /Booths near Simbal Majra<br>
-            1)Govt Girls High School Munnanpur Garibdass (right Side) <br>
-            2)Govt High School Bhago Majra (left Side) <br>
-            3)Govt El School Daun Majra <br>
-            4)Govt Ele School Khairpur <br>
-            5)Govt Ele School Khanpur (left Side) <br>
-            HOW TO REACH Simbal Majra
-            <br><h4>By Rail</h4><br>
-            Kharar Rail Way Station , <br>Kurali Rail Way Station are the very nearby railway stations to Simbal Majra. <br>
+<br>
+Bhjheri ( 1 KM ) , Shakrullapur ( 2 KM ) , Madan Heri ( 3 KM ) , Rora ( 3 KM ) , Deh Kalan ( 3 KM ) are the nearby Villages to Simbal Majra. Simbal Majra is surrounded by Kurali Tehsil towards North , Morinda Tehsil towards west , Majri Tehsil towards North , Mohali Tehsil towards East .
+<br>
+Kharar , Morinda , Kurali , Mohali are the near by Cities to Simbal Majra.
+<br>
+This Place is in the border of the S.a.s Nagar District and Rupnagar District.<br> Rupnagar District Kurali is North towards this place . Also it is in the Border of other district Chandigarh . It is near to the Chandigarh State Border.<br>
+Simbal Majra 2011 Census Details<br>
+Simbal Majra Local Language is Punjabi.<br> Simbal Majra Village Total population is 568 and number of houses are 104. Female <br>Population is 45.8%. <br>Village literacy rate is 78.5% and the Female Literacy rate is 31.9%.<br>
+Population<br>
+Census Parameter	Census Data
+Total Population	568
+Total No of Houses	104
+Female Population %	45.8 % ( 260)
+Total Literacy rate %	78.5 % ( 446)
+Female Literacy rate	31.9 % ( 181)
+Scheduled Tribes Population %	0.0 % ( 0)
+Scheduled Caste Population %	0.0 % ( 0)
+Working Population %	31.5 %
+Child(0 -6) Population by 2011	52
+Girl Child(0 -6) Population % by 2011	50.0 % ( 26)<br>
+
+Simbal Majra Census More Deatils.
+<br>
+Politics in Simbal Majra
+SAD , BSP , INC are the major political parties in this area.<br>
+Polling Stations /Booths near Simbal Majra<br>
+1)Govt Girls High School Munnanpur Garibdass (right Side) <br>
+2)Govt High School Bhago Majra (left Side) <br>
+3)Govt El School Daun Majra <br>
+4)Govt Ele School Khairpur <br>
+5)Govt Ele School Khanpur (left Side) <br>
+HOW TO REACH Simbal Majra
+<br>By Rail<br>
+Kharar Rail Way Station , <br>Kurali Rail Way Station are the very nearby railway stations to Simbal Majra. <br>
         </div>
       </div>
       <div id="College" class="tab">
@@ -194,7 +196,7 @@ Driving License        </div>
         <div class="listItem shdw1">
           <div class="itemImg">
               <h3>GOVT. ELEMENTARY SCHOOL
-              </h3>
+              </h3><p>ISR</p>
               <h4>Village Name-SimabalMajra
 
               <br>
@@ -203,19 +205,7 @@ Driving License        </div>
 
           </div>
         </div>
-        <div class="listItem shdw1">
-          <div class="itemImg">
-              <h3>GOVT. ELEMENTARY SCHOOL
-                  <br>CO EDUCATION<p>Co</p>
-              </h3>
-              <h4>Village Name-Gharaun
-
-              <br>
-                  Primary School
-              </h4>
-
-          </div>
-        </div>
+        
         <div class="listItem shdw1">
           <div class="itemImg">
 
